--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 3306,
   "username": "root",
-  "password": "",
+  "password": "password",
   "database": "im_test",
   "entities": ["src/entity/**.entity{.ts,.js}"],
   "synchronize": true
